--- a/tests/cases/small/config/test_config_small.yml
+++ b/tests/cases/small/config/test_config_small.yml
@@ -24,9 +24,7 @@ tasks:
   - icon:
       plugin: shell
       command: $PWD/tests/files/scripts/icon.py
-      cli_arguments:
-        keyword:
-          --restart: icon_restart
+      cli_arguments: "{--restart icon_restart} {--init initial_conditions}"
   - cleanup:
       plugin: shell
       command: $PWD/tests/files/scripts/cleanup.py
