--- a/tests/cases/parameters/config/test_config_parameters.yml
+++ b/tests/cases/parameters/config/test_config_parameters.yml
@@ -10,7 +10,7 @@ cycles:
       tasks:
         - icon:
             inputs:
-              - initial conditions:
+              - initial_conditions:
                   when:
                     at: *root_start_date
               - icon_restart:
@@ -45,32 +45,32 @@ cycles:
 tasks:
   - icon:
       plugin: shell
-      command: $PWD/tests/files/scripts/icon.py
+      command: scripts/icon.py
       cli_arguments: "{--restart icon_restart} {--init initial_conditions} {--forcing forcing}"
       parameters: [foo, bar]
   - statistics_foo:
       plugin: shell
-      command: $PWD/tests/files/scripts/statistics.py
+      command: scripts/statistics.py
       parameters: [bar]
   - statistics_foo_bar:
       plugin: shell
-      command: $PWD/tests/files/scripts/statistics.py
+      command: scripts/statistics.py
   - merge:
       plugin: shell
-      command: $PWD/tests/files/scripts/merge.py
+      command: scripts/merge.py
 
 data:
   available:
-    - initial conditions:
+    - initial_conditions:
         type: file
-        src: .
+        src: data/initial_conditions
     - forcing:
         type: file
-        src: .
+        src: data/forcing
   generated:
     - icon_output:
         type: file
-        src: output
+        src: icon_output
         parameters: [foo, bar]
     - icon_restart:
         type: file
@@ -78,14 +78,14 @@ data:
         parameters: [foo, bar]
     - analysis_foo:
         type: file
-        src: analysis_foo
+        src: analysis
         parameters: [bar]
     - analysis_foo_bar:
         type: file
-        src: foo_analysis_bar
+        src: analysis
     - yearly_analysis:
         type: file
-        src: yearly_analysis
+        src: analysis
 
 parameters:
   foo: [0, 1]
