Add option to specify the computer for a task (#78)
The user can specify a computer for a task by the aiida label. A computer can
be initialized through the verdi CLI or programatically. This is for now the only
feasible solution to support the whole scope of connections ssh and firecrest
without implementing our own CLI resolution logic.

--- a/tests/cases/small/config/test_config_small.yml
+++ b/tests/cases/small/config/test_config_small.yml
@@ -26,11 +26,13 @@ cycles:
                   date: 2026-05-01T00:00
 tasks:
   - icon:
+      computer: localhost
       plugin: shell
       command: scripts/icon.py
       cli_arguments: "{--restart icon_restart} {--init initial_conditions}"
       env_source_files: data/dummy_source_file.sh
   - cleanup:
+      computer: localhost
       plugin: shell
       command: scripts/cleanup.py
 data:
