ICON task implementation (#68)
Start a first implementation of the ICON task to be further developed when developing concrete ICON workflows.
- add namelists to parsing
- enable namelist parameters modifications specifications by the user
- create and update IconTask.core_namelists given the user input and the workflow context + corresponding test
- dump updated namelists to file
- introduce the port concept to handle restarts and further developments
- adapt workgraph creation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
   "aiida-workgraph==0.4.10",
   "termcolor",
   "pygraphviz",
-  "lxml"
+  "lxml",
+  "f90nml"
 ]
 license = {file = "LICENSE"}
 
