--- a/tests/cases/large/config/test_config_large.yml
+++ b/tests/cases/large/config/test_config_large.yml
@@ -28,6 +28,7 @@ cycles:
                   when:
                     after: *root_start_date
                   lag: '-P2M'
+                  port: restart
             outputs: [stream_1, stream_2, icon_restart]
         - postproc_1:
             inputs: [stream_1]
@@ -79,14 +80,16 @@ tasks:
         squashfs: path/to/squashfs
         mount_point: runtime/mount/point
   - icon:
-      plugin: shell 
-      command: scripts/icon
-      cli_arguments: "{-g grid_file} {--input icon_input}"
+      plugin: icon
       nodes: 40
       walltime: 23:59:59
       namelists:
-        master: path/to/mater_nml
-        model: path/to/model_nml
+        - ./ICON/icon_master.namelist
+        - ./ICON/NAMELIST_exclaim_ape_R02B04:
+            parallel_nml:
+              nproma: 96
+            output_nml[1]:
+              output_filename: atm_2d
       uenv:
         squashfs: path/to/squashfs
         mount_point: runtime/mount/point
