--- a/tests/cases/small/config/test_config_small.yml
+++ b/tests/cases/small/config/test_config_small.yml
@@ -17,6 +17,7 @@ cycles:
                   when:
                     after: *root_start_date
                   lag: -P2M
+                  port: restart
             outputs: [icon_output, icon_restart]
   - lastly:
       tasks:
