Tests and canonicalization for ConfigWorkflow (#89)
* add doctest infra
* add tests for `ConfigWorkflow` (creation from yaml / API)
* add `CanonicalWorkflow` with 
   - additional validation and information from outside yaml file
   - conversion function from `ConfigWorkflow`
   - unit tests
* update `sirocco.workflow` to use `CanonicalWorkflow`
* basic `workflow.Workflow` creation from `CanonicalWorkflow` test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ Changelog = "https://github.com/C2SM/Sirocco/blob/main/CHANGELOG.md"
 [tool.pytest.ini_options]
 # Configuration for [pytest](https://docs.pytest.org)
 addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
+norecursedirs = "tests/cases"
 
 [tool.coverage.run]
 # Configuration of [coverage.py](https://coverage.readthedocs.io)
@@ -77,6 +78,8 @@ path = "src/sirocco/__init__.py"
 extra-dependencies = [
     "ipdb"
 ]
+default-args = []
+extra-args = ["--doctest-modules"]
 
 [[tool.hatch.envs.hatch-test.matrix]]
 python = ["3.12"]
