Update name and year in mkdocs.yml (#104)

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -17,4 +17,4 @@ nav:
   - Home: index.md
 
 
-copyright: Copyright &copy; 2024 by the WcFlow developer team.
+copyright: Copyright &copy; 2025 by the Sirocco developer team.
