--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
   "numpy",
   "isoduration",
   "pydantic",
-  "pydantic-yaml",
+  "ruamel.yaml",
   "aiida-core>=2.5",
   "aiida-workgraph==0.4.10",
   "termcolor",
