infra: Improve testing usability (#117)
* disable slow tests by default, enable on CI

* fix unavoidable warnings and force non-ignored warnigns as errors.

* add cmdline option for regenerating serialized references

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,16 @@ Changelog = "https://github.com/C2SM/Sirocco/blob/main/CHANGELOG.md"
 # Configuration for [pytest](https://docs.pytest.org)
 addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
 norecursedirs = "tests/cases"
+markers = [
+  "slow: slow integration tests which are not recommended to run locally for normal development"
+]
+filterwarnings = [
+  "error",
+  "ignore::UserWarning",
+  'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',  # from aio_pika via duration
+  "ignore:There is no current event loop:DeprecationWarning",  # from plumpy via aiida testing tools
+  "ignore:Object of type <DbNode> not in session:sqlalchemy.exc.SAWarning",  # sqlalchemy via aiida testing tools
+]
 
 [tool.coverage.run]
 # Configuration of [coverage.py](https://coverage.readthedocs.io)
@@ -83,7 +93,7 @@ extra-dependencies = [
     "ipdb"
 ]
 default-args = []
-extra-args = ["--doctest-modules"]
+extra-args = ["--doctest-modules", '-m not slow']
 
 [[tool.hatch.envs.hatch-test.matrix]]
 python = ["3.12"]
