--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
       env:
         PYTEST_ADDOPTS: "--durations=0"
       run: |
-        hatch test --cover
+        hatch test -m "" --parallel --cover # override default exclusion of slow tests with -m ""
 
   docs:
     runs-on: ubuntu-latest
