infra: Static typing on CI (#118)
* fix all typing errors

* add mypy to CI

* set static typing env to always use python 3.12 for consistency

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,3 +83,21 @@ jobs:
         verdi presto
     - name: Run formatter and linter
       run: hatch fmt --check
+
+  typechecking:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.12
+    - name: Install hatch
+      run: |
+        pip install --upgrade pip
+        pip install hatch
+    - name: Install Graphviz
+      run: sudo apt-get install graphviz graphviz-dev
+    - name: Run formatter and linter
+      run: hatch run types:check
