--- a/tests/cases/parameters/config/config.yml
+++ b/tests/cases/parameters/config/config.yml
@@ -14,6 +14,7 @@ cycles:
               - initial_conditions:
                   when:
                     at: *root_start_date
+                  port: init
               - icon_restart:
                   when:
                     after: *root_start_date
@@ -22,16 +23,21 @@ cycles:
                   parameters:
                     foo: single
                     bar: single
-              - forcing
+                  port: restart
+              - forcing:
+                  port: forcing
             outputs: [icon_output, icon_restart]
         - statistics_foo:
             inputs:
               - icon_output:
                   parameters:
                     bar: single
+                  port: None
             outputs: [analysis_foo]
         - statistics_foo_bar:
-            inputs: [analysis_foo]
+            inputs:
+              - analysis_foo:
+                  port: None
             outputs: [analysis_foo_bar]
   - yearly:
       cycling:
@@ -44,24 +50,28 @@ cycles:
               - analysis_foo_bar:
                   target_cycle:
                     lag: ['P0M', 'P6M']
+                  port: None
             outputs: [yearly_analysis]
 
 tasks:
   - icon:
       plugin: shell
-      command: scripts/icon.py
-      cli_arguments: "{--restart icon_restart} {--init initial_conditions} {--forcing forcing}"
+      src: scripts/icon.py
+      command: "icon.py --restart {PORT::restart} --init {PORT::init} --forcing {PORT::forcing}"
       parameters: [foo, bar]
   - statistics_foo:
       plugin: shell
-      command: scripts/statistics.py
+      src: scripts/statistics.py
+      command: "statistics.py {PORT::None}"
       parameters: [bar]
   - statistics_foo_bar:
       plugin: shell
-      command: scripts/statistics.py
+      src: scripts/statistics.py
+      command: "statistics.py {PORT::None}"
   - merge:
       plugin: shell
-      command: scripts/merge.py
+      src: scripts/merge.py
+      command: "merge.py {PORT::None}"
 
 data:
   available:
