Ensure proper workgraph resolution (#126)
- Make sure workgraph nodes are created before using them in the graph creation algorithm
- Make the algorithm more readable by:
    - reducing the level of nested calls, having explicit loops over tasks and data in `__init__`
    - using singledispatch for methods that need a separate implementation between shell and icon tasks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,3 +144,7 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = ["f90nml"]
 ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["aiida_workgraph.sockets.builtins"]
+ignore_missing_imports = true
