--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "ruamel.yaml",
   "aiida-core>=2.5",
   "aiida-workgraph==0.4.10",
+  "aiida-icon>=0.4.0",
   "termcolor",
   "pygraphviz",
   "lxml",
