Implement support of `IconTask` in `WorkGraph` creation
- Add dispatching for `IconTask` in multiple functions in responsible
  for creating the WorkGraph.
- Pass `computer` argument to `core.Task` since it is required for the
  creation of a `IconCaclculation`. In the `small-shell` config the
  usage of `computer` has been removed temporarly until PR #136 fixes
  the usage.
- Changes in `core.AvailableData`:
  - Use `config_rootdir` to resolve location of data if relative.
  - The `src` member is now compulsory and validated. This change
    required to implement the `from_config` constructor for
    `AvailableData` and `GeneratedData` as the validation does not
    happen for `GeneratedData`.
- Fixing how `is_restart` is determined: It was not considering the data
  structure correctly data items. It was only checking the existance of
  the restart key in the input items, it was, however, not considering
  that the data structure still lists the input item with an empty list
  when the `when` keyword is used. Now it validates correctly to
  `False`.
- In tests we use now `pytest.fixture.usefixtures` when a fixture is not
  directly used but is required to be executed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
   "pydantic",
   "ruamel.yaml",
   "aiida-core>=2.5",
+  "aiida-icon>=0.4.0",
   "aiida-workgraph==0.5.2",
   "termcolor",
   "pygraphviz",
@@ -95,7 +96,7 @@ extra-dependencies = [
     "ipdb"
 ]
 default-args = []
-extra-args = ["--doctest-modules", '-m not slow', '-m not requires_icon']
+extra-args = ["--doctest-modules", "-m", "not slow and not requires_icon"]
 
 [[tool.hatch.envs.hatch-test.matrix]]
 python = ["3.12"]
@@ -135,7 +136,7 @@ extra-dependencies = [
 ]
 
 [tool.hatch.envs.types.scripts]
-check = "mypy --no-incremental {args:.}"
+check = "mypy --exclude 'tests/cases/*' --no-incremental {args:.}"
 
 [[tool.mypy.overrides]]
 module = ["isoduration", "isoduration.*"]
