Fix mypy error related to termcolor Color type (#139)
Replace the `Color` type by `str` as it does not exist in termcolor.
The mypy issue is due to a recent change in termcolor from the PR
termcolor/termcolor#97

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,7 +127,8 @@ extra-dependencies = [
   "types-setuptools",
   "types-docutils",
   "types-colorama",
-  "types-Pygments"
+  "types-Pygments",
+  "types-termcolor"
 ]
 
 [tool.hatch.envs.types.scripts]
