test f7t-controller runner

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
   "ruamel.yaml",
   "aiida-core>=2.5",
   "aiida-icon>=0.4.0",
+  "aiida-firecrest @ git+https://github.com/aiidateam/aiida-firecrest.git@8e99890",
   "aiida-workgraph==0.5.2",
   "termcolor",
   "pygraphviz",
@@ -157,3 +158,6 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = ["aiida_workgraph.sockets.builtins"]
 ignore_missing_imports = true
+
+[tool.hatch.metadata]
+allow-direct-references = true
